path emp
